# asdf-zarr

./: .gitignore  .pre-commit-config.yaml  CHANGES.rst  README.md  README.rst  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: changelog.yml  ci.yml  compare_asdf_support.yml  release.yml
asdf_zarr/: _zarr_compat.py  converter.py  extensions.py  storage.py  util.py
asdf_zarr/tests/: test_asdf_block_store.py  test_internal_store.py  test_wrapped_store.py  test_zarr.py
notebooks/: ASDF_array_storage_intro.ipynb
src/asdf_zarr/: converter.py  storage.py  util.py
src/asdf_zarr/tests/: test_zarr.py
