[metadata]
name = asdf_zarr
description = TODO
long_description = TODO
author = TODO
version = 0.0.1
license = BSD-3-Clause

[options]
zip_safe = True
python_requires = >=3.8
setup_requires =
    setuptools_scm
install_requires =
    asdf git+https://github.com/asdf-format/asdf@main
    zarr >= 2.14  # to get https://github.com/zarr-developers/zarr-python/issues/1334
    fsspec
package_dir =
    =src
packages = find:

[options.entry_points]
asdf.extensions =
    asdf_zarr = asdf_zarr.extensions:get_extensions

[options.packages.find]
where = src
